Some documentation on query logging.

--- a/klee/www/Documentation.html
+++ b/klee/www/Documentation.html
@@ -24,7 +24,7 @@
 
     <li>
       <a href="klee-options.html">KLEE Options</a>:      
-      Overview of the KLEE's main command-line options.
+      Overview of KLEE's main command-line options.
     </li>
 
     <li>
