Added a note about ulimit in the installation instructions; thanks to Hristina Palikareva for pointing this out.

--- a/klee/www/GetStarted.html
+++ b/klee/www/GetStarted.html
@@ -152,6 +152,12 @@ used KLEE with a more recent version of STP.)
 </div>
 </li>
 
+As documented on the STP website, it is essential to run the following
+command before using STP (and thus KLEE):
+<div class="instr">
+  $ ulimit -s unlimited
+</div>
+
 
 <li>[Optional] <b>Build uclibc and the POSIX environment model:</b>
 
