Some information about the Coreutils experiments presented in the KLEE OSDI paper.

--- a/klee/www/Documentation.html
+++ b/klee/www/Documentation.html
@@ -42,6 +42,11 @@
       the KLEE solver (kleaver).
     </li>
 
+    <li>
+      <a href="CoreutilsExperiments.html">OSDI'08 Coreutils Experiments</a>:
+      Some information about the Coreutils experiments presented in our <a href="http://www.doc.ic.ac.uk/~cristic/papers/klee-osdi-08.pdf">KLEE OSDI'08 paper</a>.
+    </li>
+
   </ol>
 </div>
 </body>
