Updated text referring to the old mailing list on keeda.

--- a/klee/www/GetStarted.html
+++ b/klee/www/GetStarted.html
@@ -236,7 +236,7 @@ runtime, which is built on top of the uClibc C library.
   to try KLEE.</li>
 </ol>
 
-<p><b>NOTE:</b> If you are installing the system of Ubuntu 12.04 (or similar), you might want to take a look at this <a href="http://keeda.stanford.edu/pipermail/klee-dev/2012-September/000922.html">thread</a>.</p>
+<p><b>NOTE:</b> If you are installing the system of Ubuntu 12.04 (or similar), you might want to take a look at this <a href="http://thread.gmane.org/gmane.comp.compilers.llvm.klee/923">message</a>.</p>
 <br/>
 
 </div>
