--- a/klee/www/OpenProjects.html
+++ b/klee/www/OpenProjects.html
@@ -18,7 +18,7 @@
   This page lists a variety of open projects that are natural (and tractable)
   extensions of KLEE and things that we would love to see people work on.  If
   you are interested in tackling any of the projects, please mail
-  <a href="http://keeda.stanford.edu/mailman/listinfo/klee-dev">klee-dev</a>
+  <a href="klee-dev.html">klee-dev</a>
   with your ideas -- or even better, your patches!.</a> 
 
   <ul>
