--- a/klee/www/klee-dev.html
+++ b/klee/www/klee-dev.html
@@ -21,8 +21,8 @@
   mailing list.</p>
 
   
-  <p>However, before doing so, please check <a href="
-  http://www.mail-archive.com/klee-dev@keeda.stanford.edu/">klee-dev's
+  <p>However, before doing so, please
+  check <a href="http://www.mail-archive.com/klee-dev@imperial.ac.uk/">klee-dev's
   searchable archive<a/> to see if your question has already been
   answered.</p>
 
